@@ -1,9 +1,9 @@
 package it.polimi.ingsw.Controller;
 
-import it.polimi.ingsw.Controller.Enums.MoveDestination;
 import it.polimi.ingsw.Controller.Actions.MoveStudent;
 import it.polimi.ingsw.Controller.Actions.PlayAssistantCard;
 import it.polimi.ingsw.Controller.Actions.PlayCharacterCard;
+import it.polimi.ingsw.Controller.Enums.MoveDestination;
 import it.polimi.ingsw.Exceptions.Input.GenericInputValidationException;
 import it.polimi.ingsw.Exceptions.Input.InputValidationException;
 import it.polimi.ingsw.Misc.Optional;
@@ -25,16 +25,16 @@ import static org.junit.Assert.assertTrue;
 public class PlayCharacterCardTest {
 
     @Test
-    public void checkUse() throws Exception{
-        GameHandler gh = initializeGameBoard(20,1,1);
+    public void checkUse() throws Exception {
+        GameHandler gh = initializeGameBoard(20, 1, 1);
         GameBoard gameBoard = playAssistantCard(gh).getModelCopy();
         PlayerBoard player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         int initialReserve = gameBoard.getCoinReserve();
         int initialBalance = player.getCoinBalance();
         StatefulEffect cardStateful = (StatefulEffect) gameBoard.getCharacterCards().get(0);
-        PlayCharacterCard playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.of(0),
-                                                                    Optional.of((PawnColour) (cardStateful).getState().get(0)),
-                                                                            Optional.empty());
+        PlayCharacterCard playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.of(0),
+                Optional.of((PawnColour) (cardStateful).getState().get(0)),
+                Optional.empty());
 
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
@@ -54,7 +54,7 @@ public class PlayCharacterCardTest {
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -72,7 +72,7 @@ public class PlayCharacterCardTest {
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.of(0), Optional.empty(), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.of(0), Optional.empty(), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -106,7 +106,7 @@ public class PlayCharacterCardTest {
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -124,7 +124,7 @@ public class PlayCharacterCardTest {
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.of(0), Optional.empty(), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.of(0), Optional.empty(), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -144,7 +144,7 @@ public class PlayCharacterCardTest {
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -166,7 +166,7 @@ public class PlayCharacterCardTest {
         pairs.add(new Pair<>(player.getEntranceStudents().get(0).get(), (PawnColour) cardStateful.getState().get(0)));
         pairs.add(new Pair<>(player.getEntranceStudents().get(1).get(), (PawnColour) cardStateful.getState().get(1)));
         Pair<PawnColour, PawnColour>[] pairsArray = new Pair[pairs.size()];
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.of(pairs.toArray(pairsArray)));
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.of(pairs.toArray(pairsArray)));
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -186,7 +186,7 @@ public class PlayCharacterCardTest {
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -205,7 +205,7 @@ public class PlayCharacterCardTest {
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
         PawnColour pawnColour = Utils.random(Arrays.asList(PawnColour.BLUE, PawnColour.RED, PawnColour.YELLOW, PawnColour.GREEN, PawnColour.PINK));
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(),Optional.of(pawnColour), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.of(pawnColour), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -246,14 +246,14 @@ public class PlayCharacterCardTest {
         pairsArray = new Pair[pairs.size()];
         int firstCount = player.getDiningRoomCount(pairs.get(0).getFirst());
         int secondCount = player.getDiningRoomCount(pairs.get(1).getFirst());
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.of(pairs.toArray(pairsArray)));
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.of(pairs.toArray(pairsArray)));
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         assertEquals(player.getCoinBalance(), initialBalance - gameBoard.getCharacterCards().get(0).getCost() + 1);
         assertEquals(gameBoard.getCoinReserve(), initialReserve + gameBoard.getCharacterCards().get(0).getCost() - 2);
-        assertTrue(player.getDiningRoomCount(pairs.get(0).getFirst()) >= firstCount-2 && player.getDiningRoomCount(pairs.get(0).getFirst()) <= firstCount+2); //equals 2 if students taken from entrance have the same colour
-        assertTrue( player.getDiningRoomCount(pairs.get(1).getFirst()) >= secondCount-2 && player.getDiningRoomCount(pairs.get(1).getFirst()) <= secondCount+2);
+        assertTrue(player.getDiningRoomCount(pairs.get(0).getFirst()) >= firstCount - 2 && player.getDiningRoomCount(pairs.get(0).getFirst()) <= firstCount + 2); //equals 2 if students taken from entrance have the same colour
+        assertTrue(player.getDiningRoomCount(pairs.get(1).getFirst()) >= secondCount - 2 && player.getDiningRoomCount(pairs.get(1).getFirst()) <= secondCount + 2);
         assertTrue(player.getEntranceStudents().containsAll(pairs.stream().map(p -> Optional.of(p.getSecond())).toList()));
 
         /*
@@ -268,8 +268,8 @@ public class PlayCharacterCardTest {
         initialReserve = gameBoard.getCoinReserve();
         initialBalance = player.getCoinBalance();
         cardStateful = (StatefulEffect) gameBoard.getCharacterCards().get(0);
-        PawnColour chosenPawn= (PawnColour) cardStateful.getState().get(0);
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.of(chosenPawn), Optional.empty());
+        PawnColour chosenPawn = (PawnColour) cardStateful.getState().get(0);
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.of(chosenPawn), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -294,7 +294,7 @@ public class PlayCharacterCardTest {
         gh.executeAction(moveStudent);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
-        playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.of(chosenPawn), Optional.empty());
+        playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.of(chosenPawn), Optional.empty());
         gh.executeAction(playCharacterCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
@@ -303,58 +303,67 @@ public class PlayCharacterCardTest {
         assertEquals(0, player.getDiningRoomCount(chosenPawn));
 
 
-
-
-
     }
 
     private GameHandler initializeGameBoard(int coinReserve, int coinPerPlayer, int card) {
         StudentBag studentBag = new StudentBag(24);
         List<PlayerBoard> players = new ArrayList<>(2);
-        players.add(new PlayerBoard(1,2,"Rouge", studentBag));
-        players.add(new PlayerBoard(2,2,"Rampeo", studentBag));
-        for(PlayerBoard playerBoard : players){
+        players.add(new PlayerBoard(1, 2, "Rouge", studentBag));
+        players.add(new PlayerBoard(2, 2, "Rampeo", studentBag));
+        for (PlayerBoard playerBoard : players) {
             playerBoard.setCoinBalance(coinPerPlayer);
         }
         List<Cloud> clouds = new ArrayList<>(2);
         clouds.add(new Cloud(1));
         clouds.add(new Cloud(2));
         List<CharacterCard> characterCards = new ArrayList<>();
-        GameBoard gameBoard = new GameBoard(new IslandField(),GameMode.ADVANCED,studentBag, players, new EnumMap<>(PawnColour.class),
-                new TeamMapper(players), new TurnOrder(players.toArray(new PlayerBoard[0])),new EffectTracker(), clouds,
+        GameBoard gameBoard = new GameBoard(new IslandField(), GameMode.ADVANCED, studentBag, players, new EnumMap<>(PawnColour.class),
+                new TeamMapper(players), new TurnOrder(players.toArray(new PlayerBoard[0])), new EffectTracker(), clouds,
                 characterCards, coinReserve, coinPerPlayer);
         gameBoard.refillClouds();
-        switch (card){
-            case 1: characterCards.add(new Card01(gameBoard));
-            case 2: characterCards.add(new Card02(gameBoard));
-            case 3: characterCards.add(new Card03(gameBoard));
-            case 4: characterCards.add(new Card04(gameBoard));
-            case 5: characterCards.add(new Card05(gameBoard));
-            case 6: characterCards.add(new Card06(gameBoard));
-            case 7: characterCards.add(new Card07(gameBoard));
-            case 8: characterCards.add(new Card08(gameBoard));
-            case 9: characterCards.add(new Card09(gameBoard));
-            case 10: characterCards.add(new Card10(gameBoard));
-            case 11: characterCards.add(new Card11(gameBoard));
-            case 12: characterCards.add(new Card12(gameBoard));
+        switch (card) {
+            case 1:
+                characterCards.add(new Card01(gameBoard));
+            case 2:
+                characterCards.add(new Card02(gameBoard));
+            case 3:
+                characterCards.add(new Card03(gameBoard));
+            case 4:
+                characterCards.add(new Card04(gameBoard));
+            case 5:
+                characterCards.add(new Card05(gameBoard));
+            case 6:
+                characterCards.add(new Card06(gameBoard));
+            case 7:
+                characterCards.add(new Card07(gameBoard));
+            case 8:
+                characterCards.add(new Card08(gameBoard));
+            case 9:
+                characterCards.add(new Card09(gameBoard));
+            case 10:
+                characterCards.add(new Card10(gameBoard));
+            case 11:
+                characterCards.add(new Card11(gameBoard));
+            case 12:
+                characterCards.add(new Card12(gameBoard));
         }
 
         return new GameHandler(gameBoard, new ArrayList<>());
     }
 
-    private GameHandler playAssistantCard(GameHandler gh) throws Exception{
-       GameBoard gameBoard = gh.getModelCopy();
+    private GameHandler playAssistantCard(GameHandler gh) throws Exception {
+        GameBoard gameBoard = gh.getModelCopy();
         PlayerBoard player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         AssistantCard card = Utils.random(player.getMutableAssistantCards());
         PlayAssistantCard playAssistantCard = new PlayAssistantCard(player.getId(), card.getPriority());
         gh.executeAction(playAssistantCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
-        while(true) {
+        while (true) {
             card = Utils.random(player.getMutableAssistantCards());
             PlayAssistantCard playAssistantCard1 = new PlayAssistantCard(player.getId(), card.getPriority());
             AssistantCard finalCard = card;
-            if(gameBoard.getMutableTurnOrder().getSelectedCards().stream()
+            if (gameBoard.getMutableTurnOrder().getSelectedCards().stream()
                     .noneMatch(selected -> selected.getPriority() == finalCard.getPriority())) {
                 gh.executeAction(playAssistantCard1);
                 break;
@@ -371,35 +380,36 @@ public class PlayCharacterCardTest {
         PlayCharacterCard playAction = new PlayCharacterCard(player.getId(), 5, Optional.empty(), Optional.empty(), Optional.empty());
         gh.executeAction(playAction);
     }
+
     @Test
-    public void duplicateCharacterCardAction() throws Exception{
+    public void duplicateCharacterCardAction() throws Exception {
         StudentBag studentBag = new StudentBag(24);
         List<PlayerBoard> players = new ArrayList<>(2);
-        players.add(new PlayerBoard(1,2,"Rouge", studentBag));
-        players.add(new PlayerBoard(2,2,"Rampeo", studentBag));
+        players.add(new PlayerBoard(1, 2, "Rouge", studentBag));
+        players.add(new PlayerBoard(2, 2, "Rampeo", studentBag));
         List<Cloud> clouds = new ArrayList<>(2);
         clouds.add(new Cloud(1));
         clouds.add(new Cloud(2));
         List<CharacterCard> characterCards = new ArrayList<>();
-        GameBoard gameBoard = new GameBoard(new IslandField(),GameMode.ADVANCED,studentBag, players, new EnumMap<>(PawnColour.class),
-                new TeamMapper(players), new TurnOrder(players.toArray(new PlayerBoard[0])),new EffectTracker(), clouds,
-                characterCards,20,1 );
+        GameBoard gameBoard = new GameBoard(new IslandField(), GameMode.ADVANCED, studentBag, players, new EnumMap<>(PawnColour.class),
+                new TeamMapper(players), new TurnOrder(players.toArray(new PlayerBoard[0])), new EffectTracker(), clouds,
+                characterCards, 20, 1);
         gameBoard.refillClouds();
         characterCards.add(new Card01(gameBoard));
         characterCards.add(new Card02(gameBoard));
         characterCards.add(new Card03(gameBoard));
-        GameHandler gh = new GameHandler(gameBoard,new ArrayList<>());
+        GameHandler gh = new GameHandler(gameBoard, new ArrayList<>());
         PlayerBoard player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         AssistantCard card = Utils.random(player.getMutableAssistantCards());
         PlayAssistantCard playAssistantCard = new PlayAssistantCard(player.getId(), card.getPriority());
         gh.executeAction(playAssistantCard);
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
-        while(true) {
+        while (true) {
             card = Utils.random(player.getMutableAssistantCards());
             PlayAssistantCard playAssistantCard1 = new PlayAssistantCard(player.getId(), card.getPriority());
             AssistantCard finalCard = card;
-            if(gameBoard.getMutableTurnOrder().getSelectedCards().stream()
+            if (gameBoard.getMutableTurnOrder().getSelectedCards().stream()
                     .noneMatch(selected -> selected.getPriority() == finalCard.getPriority())) {
                 gh.executeAction(playAssistantCard1);
                 break;
@@ -408,55 +418,56 @@ public class PlayCharacterCardTest {
         gameBoard = gh.getModelCopy();
         player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         StatefulEffect card1 = (StatefulEffect) gameBoard.getCharacterCards().get(0);
-        PlayCharacterCard playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.of(0),
+        PlayCharacterCard playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.of(0),
                 Optional.of((PawnColour) (card1).getState().get(0)),
                 Optional.empty());
 
         gh.executeAction(playCharacterCard);
         try {
             gh.executeAction(playCharacterCard);
-        }catch (GenericInputValidationException exception){
+        } catch (GenericInputValidationException exception) {
             assertEquals("An error occurred while validating: Action\n" +
                     "The error was: this action can't be executed more than once or be executed by other player than the current", exception.getMessage());
         }
     }
+
     @Test
-    public void simpleModePlayAttempt() throws Exception{
+    public void simpleModePlayAttempt() throws Exception {
         GameHandler gh = new GameHandler(GameMode.SIMPLE, "ale", "teo");
         GameBoard gameBoard = gh.getModelCopy();
         PlayerBoard player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         PlayCharacterCard playAction = new PlayCharacterCard(player.getId(), 5, Optional.empty(), Optional.empty(), Optional.empty());
         try {
             gh.executeAction(playAction);
-        }catch (GenericInputValidationException exception){
+        } catch (GenericInputValidationException exception) {
             assertEquals("An error occurred while validating: Character Card\n" +
                     "The error was: Character Cardcan't be played in simple mode", exception.getMessage());
         }
     }
 
     @Test
-    public void NoAssistantCardPlayed() throws Exception{
+    public void NoAssistantCardPlayed() throws Exception {
         GameHandler gh = new GameHandler(GameMode.ADVANCED, "ale", "teo");
         GameBoard gameBoard = gh.getModelCopy();
         PlayerBoard player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
         PlayCharacterCard playAction = new PlayCharacterCard(player.getId(), 5, Optional.empty(), Optional.empty(), Optional.empty());
         try {
             gh.executeAction(playAction);
-        }catch (GenericInputValidationException exception){
+        } catch (GenericInputValidationException exception) {
             assertEquals("An error occurred while validating: History\n" +
                     "The error was: No PlayAssistantCard has been played", exception.getMessage());
         }
     }
 
     @Test
-    public void InsufficientBalanceException() throws Exception{
+    public void InsufficientBalanceException() throws Exception {
         GameHandler gh = initializeGameBoard(20, 1, 2);
         GameBoard gameBoard = playAssistantCard(gh).getModelCopy();
         PlayerBoard player = gameBoard.getMutableTurnOrder().getMutableCurrentPlayer();
-        PlayCharacterCard playCharacterCard = new PlayCharacterCard(player.getId(),0, Optional.empty(), Optional.empty(), Optional.empty());
+        PlayCharacterCard playCharacterCard = new PlayCharacterCard(player.getId(), 0, Optional.empty(), Optional.empty(), Optional.empty());
         try {
             gh.executeAction(playCharacterCard);
-        }catch (GenericInputValidationException exception){
+        } catch (GenericInputValidationException exception) {
             assertEquals("An error occurred while validating: Character Card\n" +
                     "The error was: Character Card can't be played due to insufficient coin balance", exception.getMessage());
         }
